# MyAikaPersonalAssistant

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOUL.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  readme.md  readme.txt
aika-trading-assistant/: .env.example  README.md  docker-compose.yml  pyproject.toml
aika-trading-assistant/services/streamer/: index.js  package.json
aika-trading-assistant/src/aika_trading/: __init__.py  config.py  logging.py
aika-trading-assistant/src/aika_trading/api/: deps.py  main.py
aika-trading-assistant/src/aika_trading/connectors/: alpaca.py  base.py  coinbase.py  robinhood.py  schwab.py
aika-trading-assistant/src/aika_trading/core/: __init__.py  backtest.py  cli.py  config.py  ensemble.py  execution.py  logging.py  metrics.py  models.py  regime.py  risk.py  runner.py  storage.py  validation.py  walk_forward.py
aika-trading-assistant/src/aika_trading/db/: models.py  session.py
aika-trading-assistant/src/aika_trading/knowledge/: embeddings.py  (+1 more)
aika-trading-assistant/src/aika_trading_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aika-trading-assistant/tests/: conftest.py  test_dry_run_flow.py  test_oauth.py  test_policy.py  test_token_refresh.py
aika-trading-assistant/tests/core/: test_broker_paper.py  test_execution_models.py  test_grid_search.py  test_options_analytics.py  test_options_backtest.py  test_options_scan.py  test_risk_engine.py  test_smoke_backtest.py  test_time_ordering.py  test_walk_forward.py
(+464 files in other folders)
