[project]
name = "aika-trading-assistant"
version = "0.1.0"
description = "Production-oriented Aika Trading Assistant backend, worker, and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Aika" }]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.18",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "cryptography>=42.0.0",
  "tenacity>=8.2.3",
  "celery>=5.3.6",
  "redis>=5.0.0",
  "qdrant-client>=1.7.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.9.15",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5",
  "respx>=0.21.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0"
]
embeddings = [
  "sentence-transformers>=2.7.0"
]
ccxt = [
  "ccxt>=4.0.0"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
